# 7k-ambition

./: .gitignore  CHANGELOG.md  COPYING  README  bear-config.json  configure.ac
data/RESOURCE/: I_ICON.RES  I_IF.RES
include/: ConfigAdv.h  GAMEDEF.h  Makefile.am  OERRCTRL.h  OERROR.h  OFIRM.h  OGAME.h  OGFILE.h  OGF_REC.h  OGF_V1.h  OINFO.h  OLOG.h  OMOUSE.h  ONATION.h  ONEWS.h  OREGION.h  OREMOTEQ.h  OROCKRES.h  OSNOWG.h  OSYS.h  OTOWN.h  OUNIT.h  OWEATHER.h  PlayerStats.h  input_stream.h  multiplayer.h  output_stream.h
include/ambition/: Ambition_building.hh  Ambition_config.hh  Ambition_control.hh  Ambition_coordinates.hh  Ambition_entity.hh  Ambition_inn.hh  Ambition_input.hh  Ambition_minimap.hh  Ambition_news.hh  Ambition_polity.hh  Ambition_remote.hh  Ambition_repository.hh  Ambition_serialisation.hh  Ambition_time.hh  Ambition_unit.hh  Ambition_user_interface.hh  Ambition_version.hh  Ambition_vga.hh  Makefile.am  boost-macros.hh  format.hh
include/ambition/7kaaInterface/: Makefile.am  building.hh  config.hh  control.hh  draw.hh  inn.hh  input.hh  polity.hh  serialisation.hh  unit.hh
packaging/: mkbundle
packaging/windows/: build.sh  install.nsi
po/: 7k-ambition.pot  7kaa.pot  POTFILES.in  de.po  eo.po  es.po  fr.po  pl.po  pt_BR.po  ru.po
src/: AM.cpp  CmdLine.cpp  ConfigAdv.cpp  LocaleRes.cpp  Makefile.am  OAI_ACT.cpp  OAI_ACT2.cpp  OAI_ATTK.cpp  OAI_BUIL.cpp  OAI_CAP2.cpp  OAI_CAPT.cpp  OAI_DEFE.cpp  OAI_ECO.cpp  OAI_INFO.cpp  OAI_MAIN.cpp  OAI_MAR2.cpp  OAI_MARI.cpp  OAI_MILI.cpp  OAI_QUER.cpp  OAI_SEEK.cpp  OAI_TALK.cpp  OAI_TOWN.cpp  OAI_TRAD.cpp  OAI_UNIT.cpp  OANLINE.cpp  OBATTLE.cpp  OBOX.cpp  OBULLET.cpp  OBULLETA.cpp  OBUTT3D.cpp  OBUTTCUS.cpp  OBUTTON.cpp  OCONFIG.cpp  ODATE.cpp  ODIR.cpp  OERRCTRL.cpp  OERROR.cpp  OEXPMASK.cpp  OFILE.cpp  OFILETXT.cpp  (+174 more)
src/ambition/: Ambition_building.cc  Ambition_config.cc  Ambition_control.cc  Ambition_coordinates.cc  Ambition_entity.cc  Ambition_inn.cc  Ambition_input.cc  Ambition_minimap.cc  Ambition_news.cc  Ambition_polity.cc  Ambition_remote.cc  Ambition_repository.cc  Ambition_serialisation.cc  Ambition_time.cc  Ambition_unit.cc  Ambition_user_interface.cc  Ambition_version.cc  Ambition_vga.cc  Makefile.am  version_details.cc
src/ambition/7kaaInterface/: Makefile.am  building.cc  config.cc  control.cc  draw.cc  inn.cc  input.cc  polity.cc  serialisation.cc  unit.cc
src/enet/: multiplayer.cpp
src/openal/: openal_audio.cpp  wav_stream.cpp
tools/: genpot  update-pot
