SUBDIRS = 7kaaInterface

noinst_HEADERS = \
	Ambition_config.hh \
	Ambition_control.hh \
	Ambition_entity.hh \
	Ambition_inn.hh \
	Ambition_input.hh \
	Ambition_minimap.hh \
	Ambition_remote.hh \
	Ambition_repository.hh \
	Ambition_serialisation.hh \
	Ambition_unit.hh \
	Ambition_version.hh \
	Ambition_vga.hh \
	format.hh \
	# end
