SUBDIRS = 7kaaInterface

noinst_HEADERS = \
	Ambition_building.hh \
	Ambition_config.hh \
	Ambition_control.hh \
	Ambition_coordinates.hh \
	Ambition_entity.hh \
	Ambition_inn.hh \
	Ambition_input.hh \
	Ambition_minimap.hh \
	Ambition_news.hh \
	Ambition_polity.hh \
	Ambition_remote.hh \
	Ambition_repository.hh \
	Ambition_serialisation.hh \
	Ambition_time.hh \
	Ambition_unit.hh \
	Ambition_version.hh \
	Ambition_vga.hh \
	boost-macros.hh \
	format.hh \
	# end
